--- a/src/modules/LoginModule/login.module.scss
+++ b/src/modules/LoginModule/login.module.scss
@@ -1,3 +1,40 @@
 .loginWrapper {
   margin-top: 1rem;
+  width: 100%;
+  @media (min-width: 600px) {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .loginContainer {
+    padding: 2rem 1rem;
+    @media (min-width: 600px) {
+      width: 400px;
+    }
+    .proceedBtn {
+      border-radius: 0;
+      padding: 13px 36px;
+      height: 43px;
+      background-color: #231f20;
+      color: white !important;
+      letter-spacing: 1px;
+      line-height: 16px;
+      font-weight: 500;
+      font-size: 12px;
+      margin: 3px;
+      &.disabled {
+        opacity: 0.5;
+      }
+
+      &:hover {
+        background-color: #231f20;
+      }
+      @media (max-width: 600px) {
+        padding: 6px 17.5px;
+        height: 28px;
+        font-size: 11px;
+      }
+    }
+  }
 }
