--- a/src/styles/qrcode.scss
+++ b/src/styles/qrcode.scss
@@ -37,13 +37,13 @@
 #html5qr-code-full-region__2 {
   border: none !important;
   #qr-shaded-region {
-    border-width: 290px 260px !important;
+    // border-width: 290px 260px !important;
     div {
       background-color: transparent !important;
     }
     &::before {
       position: absolute;
-      top: -100px;
+      top: -35px;
       left: -30px;
       content: url("./border-updated.png");
     }
