--- a/src/modules/process/scannerScreen/scannerScreen.module.scss
+++ b/src/modules/process/scannerScreen/scannerScreen.module.scss
@@ -15,4 +15,32 @@
     width: 100%;
     height: 100%;
   }
+  .customDrawerContainer {
+    height: 80vh;
+    margin-top: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .drawerInner {
+      height: 50%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+      text-align: center;
+      .pdName {
+        word-wrap: break-word;
+        white-space: normal;
+      }
+      .btnWrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        .addProductBtn {
+        }
+        .resetAndScanAgain {
+        }
+      }
+    }
+  }
 }
