--- a/src/component/molecules/storeScanner/storeScanner.module.scss
+++ b/src/component/molecules/storeScanner/storeScanner.module.scss
@@ -1,12 +1,14 @@
-.storeScannerContainer {
-  // min-height: 100vh;
-  // .headingWrapper {
-  //   font-size: 3rem;
-  //   font-weight: 900;
-  //   text-align: center;
-  // }
-  // .qrCodeScanWrapper {
-  //   margin-bottom: 1rem;
-  //   padding: 1rem;
-  // }
+.scanNowWrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: center;
+  p {
+    font-weight: 600;
+    font-size: 20px;
+  }
 }
