--- a/src/modules/homeModule/homemodule.module.scss
+++ b/src/modules/homeModule/homemodule.module.scss
@@ -1,9 +1,6 @@
 .homeWrapper {
   min-height: 100vh;
-  // display: flex;
-  // align-items: center;
-  // justify-content: flex-start;
-  // flex-direction: column;
+  background-color: #000;
   .headingWrapper {
     font-size: 3rem;
     font-weight: 900;
