--- a/src/component/molecules/storeScanner/storeScanner.module.scss
+++ b/src/component/molecules/storeScanner/storeScanner.module.scss
@@ -1,14 +1,27 @@
-.scanNowWrapper {
-  width: 100%;
+.storeScannerContainer {
   height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: space-between;
+  justify-content: space-between;
   flex-direction: column;
-  gap: 1rem;
-  text-align: center;
-  p {
-    font-weight: 600;
-    font-size: 20px;
+  .qrCodeScanWrapper {
+  }
+  .scanNowWrapper {
+    padding: 1rem;
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    p {
+      font-weight: 600;
+      font-size: 20px;
+    }
   }
 }
