--- a/src/component/molecules/storeScanner/storeScanner.module.scss
+++ b/src/component/molecules/storeScanner/storeScanner.module.scss
@@ -1,27 +1,40 @@
 .storeScannerContainer {
-  height: 100%;
+  // height: 100%;
   display: flex;
   align-items: space-between;
   justify-content: space-between;
   flex-direction: column;
   .qrCodeScanWrapper {
+    min-height: 70vh;
   }
   .scanNowWrapper {
     padding: 1rem;
     background-color: #fff;
     width: 100%;
-    height: 100%;
+    height: 25vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 1rem;
     text-align: center;
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
+    position: relative;
+    z-index: 4;
     p {
       font-weight: 600;
       font-size: 20px;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      top: -30px;
+      left: 0;
+      background-color: #fff;
+      border-top-left-radius: 40px;
+      border-top-right-radius: 40px;
+      width: 100%;
+      height: 20%;
+      z-index: 3;
     }
   }
 }
