--- a/src/modules/homeModule/homemodule.module.scss
+++ b/src/modules/homeModule/homemodule.module.scss
@@ -1,12 +1,28 @@
 .homeWrapper {
-  background-color: #000;
-  .headingWrapper {
-    font-size: 3rem;
-    font-weight: 900;
-    text-align: center;
-  }
-  .qrCodeScanWrapper {
-    margin-bottom: 1rem;
-    padding: 1rem;
+  padding: 0 1rem;
+  height: calc(100vh);
+  .homeContainer {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+    .headingWrapper {
+      font-size: 1.2rem;
+      font-weight: 900;
+      text-align: center;
+    }
+    .scanAndGoPara {
+      font-size: 2rem;
+      font-weight: 900;
+      text-align: center;
+    }
+    .description {
+      font-size: 1rem;
+      font-weight: 900;
+      text-align: center;
+      color: rgba(0, 0, 0, 0.7);
+    }
   }
 }
