--- a/src/modules/homeModule/homemodule.module.scss
+++ b/src/modules/homeModule/homemodule.module.scss
@@ -2,6 +2,7 @@
   padding: 0 1rem;
   height: calc(70vh);
   .homeContainer {
+    margin-top: 1.5rem;
     height: 100%;
     display: flex;
     align-items: center;
