--- a/src/modules/process/paymentScreen/paymentScreen.module.scss
+++ b/src/modules/process/paymentScreen/paymentScreen.module.scss
@@ -9,32 +9,5 @@
 }
 
 .selectPaymentWrapper {
-  padding-top: 3rem;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  .title {
-    text-align: center;
-  }
-  .cards {
-    padding: 0.3rem 0;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    &::after {
-      @include border_code;
-      border-bottom: none;
-    }
-    &:last-child {
-      &::after {
-        @include border_code;
-        border-bottom: 2px dashed black;
-      }
-    }
-  }
-  button {
-    margin-top: 1.5rem;
-  }
+  padding: 1rem;
 }
