--- a/src/component/atoms/savedPayment/savedPayment.module.scss
+++ b/src/component/atoms/savedPayment/savedPayment.module.scss
@@ -13,11 +13,36 @@
     .singlePayment {
       width: 100%;
       .formLabel {
+        min-height: 60px;
         padding: 2px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        border: 1px solid rgba(0, 0, 0, 0.2);
+        position: relative;
+        &::before {
+          content: "";
+          width: calc(100% + 2rem);
+          height: 1px;
+          position: absolute;
+          top: 0;
+          left: -1rem;
+          background-color: rgba(0, 0, 0, 0.2);
+        }
+        &::after {
+          content: "";
+          width: calc(100% + 2rem);
+          height: 1px;
+          position: absolute;
+          bottom: 0;
+          left: -1rem;
+          background-color: rgba(0, 0, 0, 0.2);
+        }
+        &:not(:first-child):not(:last-child) {
+          &::before {
+            content: "";
+            height: 0;
+          }
+        }
         .lhs {
           .supportText {
             padding: 0 0 0 30px;
@@ -29,6 +54,15 @@
         .rhs {
           display: flex;
           align-items: center;
+        }
+      }
+      .seeAllPayment {
+        padding: 0.5rem 0;
+        text-align: center;
+        cursor: pointer;
+        p {
+          color: #2463eb;
+          font-size: 14px;
         }
       }
     }
