--- a/src/component/atoms/otherPayment/otherPaymentInner/otherpaymentinner.module.scss
+++ b/src/component/atoms/otherPayment/otherPaymentInner/otherpaymentinner.module.scss
@@ -1,32 +1,29 @@
 .otherPaymentInner {
   .formLabel {
+    padding: 0.5rem 0;
     min-height: 60px;
-    padding: 2px;
     display: flex;
     align-items: center;
+    gap: 1rem;
     position: relative;
-    &::before {
-      content: "";
-      width: calc(100% + 2rem);
-      height: 1px;
-      position: absolute;
-      top: 0;
-      left: -1rem;
-      background-color: rgba(0, 0, 0, 0.2);
-    }
-    &::after {
-      content: "";
-      width: calc(100% + 2rem);
-      height: 1px;
-      position: absolute;
-      bottom: 0;
-      left: -1rem;
-      background-color: rgba(0, 0, 0, 0.2);
-    }
-    &:not(:first-child):not(:last-child) {
+    &.showBorder {
       &::before {
         content: "";
-        height: 0;
+        width: calc(100% + 1rem);
+        height: 1px;
+        position: absolute;
+        top: 0;
+        left: -0.5rem;
+        background-color: rgba(0, 0, 0, 0.2);
+      }
+      &::after {
+        content: "";
+        width: calc(100% + 1rem);
+        height: 1px;
+        position: absolute;
+        bottom: 0;
+        left: -0.5rem;
+        background-color: rgba(0, 0, 0, 0.2);
       }
     }
     .lhs {
@@ -34,16 +31,55 @@
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
-      .supportText {
-        padding: 0 0 0 30px;
-        transform: translateY(-8px);
-        color: rgba(0, 0, 0, 0.6);
-        font-size: 14px;
+      .labelInner {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        // align-items: flex-start;
+        justify-content: space-between;
+        .label {
+          font-size: 14px;
+        }
+        .supportText {
+          transform: translateY(-8px);
+          color: rgba(0, 0, 0, 0.6);
+          font-size: 12px;
+          white-space: nowrap;
+          &.normal {
+            color: #059669;
+          }
+        }
+      }
+      .radioWrapper {
+        span {
+          padding: 0;
+        }
       }
     }
     .rhs {
       display: flex;
       align-items: center;
+    }
+  }
+  .WalletComponent {
+    padding: 1rem 0;
+    position: relative;
+    &.showBorder {
+      &::after {
+        content: "";
+        width: calc(100% + 1rem);
+        height: 1px;
+        position: absolute;
+        bottom: 0;
+        left: -0.5rem;
+        background-color: rgba(0, 0, 0, 0.2);
+      }
+      &:not(:first-child):not(:last-child) {
+        &::before {
+          content: "";
+          height: 0;
+        }
+      }
     }
   }
 }
