--- a/src/component/molecules/CustomBottomNavigation/bottomNavigation.module.scss
+++ b/src/component/molecules/CustomBottomNavigation/bottomNavigation.module.scss
@@ -1,5 +1,9 @@
 .bottomNavigationWrapper {
+  width: 100%;
   position: fixed;
   top: 85vh;
   left: 0;
+  @media (min-width: 768px) {
+    top: 90vh;
+  }
 }
